--- a/src/styles/layouts/_catalog.scss
+++ b/src/styles/layouts/_catalog.scss
@@ -8,7 +8,7 @@
   &__grid-button {
     display: flex;
     justify-content: center;
-    margin-top: $space-3xl;
+    margin-top: 32px;
     position: relative;
     z-index: 2;
     overflow: visible;
